[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dashmap = "5.5.3"
flate2 = "1.0.28"
http = "1.0.0"
prost = "0.10.4"
rocksdb = "0.21.0"
sled = "0.34.7"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"

[build-dependencies]
prost-build = "0.10.4"

[dev-dependencies]
anyhow = "1.0.79"
async-prost = "0.4.0"
futures = "0.3.30"
tempfile = "3.10.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing-subscriber = "0.3.18"
