[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
dashmap = "5.5.3"
flate2 = "1.0.28"
futures = "0.3.30"
http = "1.0.0"
prost = "0.10.4"
rocksdb = "0.21.0"
rustls-native-certs = "0.5"
sled = "0.34.7"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.22"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
prost-build = "0.10.4"

[dev-dependencies]
async-prost = "0.4.0"
certify = "0.5.2"
futures = "0.3.30"
tempfile = "3.10.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
